[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/fonts/DarkDepths.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/menus/main_menu_screen.gd" type="Script" id=2]
[ext_resource path="res://resources/themes/button_theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[node name="MainMenuScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )
scene_name = "main"

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 595.0

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_right = 1014.0
margin_bottom = 590.0
custom_constants/separation = 60
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 244.0
margin_right = 1014.0
margin_bottom = 346.0

[node name="ButtonRows" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
margin_left = 452.0
margin_right = 562.0
margin_bottom = 102.0
custom_constants/separation = 15
alignment = 1

[node name="StartButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/ButtonRows"]
unique_name_in_owner = true
margin_right = 110.0
margin_bottom = 24.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 7 )
text = "START"

[node name="SettingsButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/ButtonRows"]
unique_name_in_owner = true
margin_top = 39.0
margin_right = 110.0
margin_bottom = 63.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 7 )
text = "SETTINGS"

[node name="ExitButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/ButtonRows"]
unique_name_in_owner = true
margin_top = 78.0
margin_right = 110.0
margin_bottom = 102.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 8 )
text = "EXIT"

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
autoplay = true
mix_target = 1

[connection signal="mouse_entered" from="PanelContainer/MarginContainer/Rows/CenterContainer/ButtonRows/StartButton" to="." method="_on_StartButton_mouse_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/ButtonRows/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/Rows/CenterContainer/ButtonRows/SettingsButton" to="." method="_on_SettingsButton_mouse_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/ButtonRows/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/Rows/CenterContainer/ButtonRows/ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/ButtonRows/ExitButton" to="." method="_on_ExitButton_pressed"]
